--- a/circle.yml
+++ b/circle.yml
@@ -8,8 +8,12 @@ general:
      - target
      
 test:
-  override:
-    - mvn clean install
+  minitest_globs:
+    - test/integration/**/*.rb
+    - test/extra-dir/**/*.rb
+#test:
+#  override:
+#    - mvn clean install
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/failsafe-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
